@@ -14,8 +14,6 @@ use Moo;
 extends q(App::Doh::Model);
 with    q(App::Doh::Role::PageConfiguration);
 with    q(App::Doh::Role::Authorization);
-with    q(App::Doh::Role::CommonLinks);
-with    q(App::Doh::Role::Preferences);
 
 has '+moniker' => default => 'admin';
 
