@@ -10,8 +10,6 @@ use Moo;
 
 extends q(App::Doh::Model);
 with    q(App::Doh::Role::PageConfiguration);
-with    q(App::Doh::Role::CommonLinks);
-with    q(App::Doh::Role::Preferences);
 
 # Public attributes
 has '+moniker'    => default => 'help';
