@@ -4,14 +4,43 @@ use namespace::autoclean;
 
 use Class::Usul::Constants qw( FALSE NUL TRUE );
 use Class::Usul::Types     qw( Object );
+use Try::Tiny;
 use Moo::Role;
 
-requires qw( components config load_page );
+requires qw( components config initialise_stash load_page log );
 
 has 'users' => is => 'lazy', isa => Object,
    builder  => sub { $_[ 0 ]->components->{user} };
 
 # Construction
+around 'initialise_stash' => sub {
+   my ($orig, $self, $req, @args) = @_;
+
+   my $stash  = $orig->( $self, $req, @args ); my $conf = $self->config;
+
+   my $params = $req->query_params; my $sess = $req->session;
+
+   for my $k (@{ $conf->stash_attr->{session} }) {
+      try {
+         my $v = $params->( $k, { optional => 1 } );
+
+         $stash->{prefs}->{ $k } = defined $v ? $sess->$k( $v ) : $sess->$k();
+      }
+      catch { $self->log->warn( $_ ) };
+   }
+
+   $stash->{skin } = delete $stash->{prefs}->{skin};
+   $stash->{links}->{cdnjs   } = $conf->cdnjs;
+   $stash->{links}->{base_uri} = $req->base;
+   $stash->{links}->{req_uri } = $req->uri;
+
+   for my $k (@{ $conf->common_links }) {
+      $stash->{links}->{ $k } = $req->uri_for( $conf->$k() );
+   }
+
+   return $stash;
+};
+
 around 'load_page' => sub {
    my ($orig, $self, $req, @args) = @_;
 
@@ -21,7 +50,7 @@ around 'load_page' => sub {
 
    for my $k (@{ $conf->stash_attr->{config } }) { $page->{ $k } //= $conf->$k }
 
-   $page->{application_version} = $App::Doh::VERSION;
+   $page->{application_version} = $conf->appclass->VERSION;
    $page->{status_message     } = $req->session->collect_status_message( $req );
 
    my $url = $page->{mode} eq 'online' ? $req->base : $req->uri_for( 'index' );
