@@ -1,5 +1,6 @@
 Revision history for App-Doh
 
+          - Merged Preference and CommonLinks roles into PageConfiguration
           - Moved Usul attribute constructor to Functions
 
 0.11.1    2015-08-28 12:54:54
